nooice added overscroll color and fixed blog column overflow

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,7 +6,8 @@
 /* html body style */
 body {
     color: white;
-    background-color: #333;
+    /* background-color: #333; */
+    background-image: linear-gradient(orangered 50%, #333 50%);
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     overflow-x: hidden;
@@ -15,10 +16,13 @@ body {
 /* header/logo title */
 .header {
     padding-top: 50px;
-    vertical-align: bottom;
     text-align: center;
     background: orangered;
     color: white;
+}
+
+.header h1 {
+    margin-bottom: 0px;
 }
 
 /* dk's style and position */
@@ -75,7 +79,6 @@ body {
 /* sidebar/left column */
 .side {
     -ms-flex: 30%;
-    min-width: 250px;
     /* IE10 */
     flex: 30%;
     background-color: #4b4b4b;
@@ -89,8 +92,6 @@ body {
     flex: 70%;
     background-color: gray;
     padding: 20px;
-    max-height: 2000px;
-    overflow-y: scroll;
 }
 
 .main h5 {
@@ -107,8 +108,11 @@ body {
     float: right;
     margin-left: 20px;
     margin-bottom: 20px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
     max-width: 1000px;
-    max-height: 300px;
+    max-height: 500px;
 }
 
 /* profile picture */
@@ -134,14 +138,6 @@ body {
     margin-right: 20px;
     text-decoration: none;
 }
-
-/* .blogimg {
-    border-radius: 25px;
-    float: right;
-    clear: both;
-    max-width: 1000px;
-    max-height: 250px;
-} */
 
 /* placeholder image */
 .fakeimg {
@@ -177,17 +173,18 @@ body {
 @media screen and (max-width: 700px) {
     .row {
         flex-direction: column;
+        max-width: 100%;
     }
-
     .main {
         max-height: none;
+        overflow-y: none;
     }
 }
 
 /* responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
 @media screen and (max-width: 400px) {
-    .navbar a {
+    /* .navbar a {
         float: none;
         width: 100%;
-    }
+    } */
 }
